# bagelquant-core

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: trigger-site.yml
bagelquant_core/: __init__.py  _operation.py  composer.py  example.py  execution.py  graph.py  hashing.py  node.py  panel.py  registry.py  transformer.py
bagelquant_core/composer/: __init__.py  aggregation.py  arithmetic.py  core.py  general.py  rolling.py  xsectional.py
bagelquant_core/panel/: core.py
bagelquant_core/transformer/: __init__.py  basic.py  core.py  general.py  logarithmic.py  missing.py  normalization.py  power.py  ranking.py  rolling.py  trigonometric.py
docs/: index.md  public-api.md
docs/00_proposal/: panel-graph-refactor-plan.md  proposal.md
docs/01_concepts/: composer.md  execution.md  graph.md  operator.md  panel.md  transformer.md
docs/02_architecture/: bagelquant core architecture.md
docs/03_conventions/: code conventions.md  git workflow conventions.md
docs/05_conventions/: code conventions.md  git workflow conventions.md
docs/cn/: architecture.md  concepts.md  index.md  quick-start.md
docs/en/: concepts.md  index.md  performance.md  quick-start.md
docs/reference/: index.md
docs/zh/: architecture.md  index.md  public-api.md  quick-start.md
scripts/: benchmark_efficiency.py  generate_operator_reference.py
src/bagelquant_core/: __init__.py  frame.py  (+6 more)
tests/: helpers.py  test_composer.py  test_efficiency_paths.py  test_execution.py  test_graph.py  test_operation_catalog.py  test_packaging.py  test_panel.py  test_transformer.py
(+317 files in other folders)
