[project]
name = "bagelquant-core"
version = "0.1.0"
description = "Composable panel data and graph logic for quantitative research"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
