[project]
name = "bagelquant-core"
version = "0.1.0"
description = "Composable panel data and graph logic for quantitative research"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exchange-calendars>=4.13.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
