[project]
name = "bagelquant-core"
version = "0.1.0"
description = "Composable panel data and graph logic for quantitative research"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "polars>=1.35.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
